[project]
name = "langgraph-crewai-doctor-appointment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.7",
    "langsmith>=0.6.8",
    "psycopg2>=2.9.11",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
